# feather

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  rustfmt.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benches/: Cargo.toml  README.md  bench.bat  bench.sh
benches/axum/: Cargo.toml
benches/axum/src/: main.rs
benches/feather/: Cargo.toml
benches/feather/src/: main.rs
crates/feather/: Cargo.toml  README.md
crates/feather-macros/: Cargo.toml
crates/feather-macros/src/: lib.rs
crates/feather-runtime/: Cargo.toml  README.md
crates/feather-runtime/examples/: server.rs  test.js
crates/feather-runtime/src/: lib.rs
crates/feather-runtime/src/http/: errors.rs  mod.rs  parser.rs  request.rs  response.rs
crates/feather-runtime/src/runtime/: engine.rs  executor.rs  mod.rs  server.rs  service.rs
crates/feather-runtime/src/server/: mod.rs  server.rs  websocket.rs
crates/feather-runtime/src/utils/: error.rs  message.rs  mod.rs  queue.rs  worker.rs
crates/feather-runtime/tests/: conn_cursor_tests.rs  request_tests.rs  response_tests.rs
crates/feather-runtime/tests/common/: mod.rs
crates/feather/src/: jwt.rs  lib.rs
crates/feather/src/docs/: authentication.md  error-handling.md  getting-started.md  middlewares.md  routing.md  server-configuration.md  state-management.md
crates/feather/src/internals/: app.rs  context.rs  error_stack.rs  mod.rs  router.rs  runtime_extensions.rs  service.rs  websocket.rs
crates/feather/src/middleware/: builtins.rs  common.rs  mod.rs
crates/feather/src/middlewares/: builtins.rs  common.rs  mod.rs
examples/: api.rs  app.rs  context.rs  counter.rs  jwt.rs  middleware.rs  serve.rs
examples/api/: Cargo.toml
examples/api/src/: main.rs
examples/app/src/: main.rs
examples/async/: Cargo.toml  test_concurrent.ps1
examples/async/src/: main.rs
examples/basic-app/: Cargo.toml
examples/basic-app/src/: main.rs
examples/context/: Cargo.toml
examples/context/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/dynamic_route/: Cargo.toml
examples/dynamic_route/src/: main.rs
examples/error-pipeline/: Cargo.toml
examples/error-pipeline/src/: main.rs
examples/jwt/: Cargo.toml
examples/jwt/src/: main.rs
examples/logging/: Cargo.toml
examples/logging/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs  middleware.rs
examples/middleware/src/async/: async_logic.rs  mod.rs
examples/router/: Cargo.toml
examples/router/src/: api.rs  main.rs
examples/serve/: Cargo.toml
examples/serve/public/: index.html
examples/serve/src/: main.rs
examples/websocket/: Cargo.toml
examples/websocket/src/: main.rs
feather-runtime/: Cargo.toml  Performance.md  README.md
feather-runtime/examples/: bench.rs  server.rs
feather-runtime/src/: lib.rs
feather-runtime/src/http/: mod.rs  parser.rs  request.rs  response.rs
feather-runtime/src/server/: server.rs  tcp.rs
feather-runtime/src/utils/: error.rs  message.rs  mod.rs  queue.rs  worker.rs
src/: jwt.rs  lib.rs  middleware.rs  sync.rs
src/internals/: app.rs  context.rs
src/middleware/: builtins.rs  common.rs  mod.rs
tests/: test_app.rs
