[workspace]
resolver = "3" # 2024
members = ["crates/*", "examples/*"]
exclude = ["benches/axum", "benches/feather"]

[workspace.dependencies]
feather = { version = "~0.3", default-features = false }
feather-runtime = { version = "~0.2", default-features = false }
http = { version = "1", default-features = false }
httparse = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
chrono = { version = "~0.4", default-features = false }
bytes = { version = "1", default-features = false }
log = { version = "~0.4", default-features = false }
serde_urlencoded = { version = "~0.7", default-features = false }
thiserror = { version = "2", default-features = false }
crossbeam = { version = "~0.8", default-features = false }
anymap = { version = "~0.12", default-features = false }
jsonwebtoken = { version = "9", default-features = false }
rusqlite = { version = "~0.35", default-features = false }