[workspace]
resolver = "3" # 2024
members = ["crates/*", "examples/*"]
exclude = ["benches/axum", "benches/feather"]

[workspace.dependencies]
feather = { version = "~0.7",path = "./crates/feather", default-features = false }
feather-runtime = { version = "~0.6", path = "./crates/feather-runtime", default-features = false }
feather-macros = {version = "~0.2", path = "./crates/feather-macros"}
http = { version = "1", default-features = false, features = ["std"]}
httparse = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"]}
chrono = { version = "0.4.41", default-features = false, features = ["now"]}
bytes = { version = "1", default-features = false }
log = { version = "~0.4", default-features = false }
serde_urlencoded = { version = "~0.7", default-features = false }
thiserror = { version = "2", default-features = false }
crossbeam = { version = "~0.8", default-features = false ,features = ["std"]}
jsonwebtoken = { version = "9", default-features = false }
r2d2 = "0.8.0"
r2d2_sqlite = "0.31.0"
urlencoding = "2.1.3"
parking_lot = { version = "~0.12"}
may ={ version = "0.3.51" }
itoa = {version = "1"}