[workspace]
resolver = "3"
members = ["axum", "feather"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[workspace.dependencies]
axum = { version = "0.8.4", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
feather = { path = "../crates/feather", default-features = false }
