[package]
name = "feather-runtime"
version = "0.1.0"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
rusty_pool = {version = "0.7.0", default-features = false}
httparse = "1.10.1"
http = "1.3.1"
crossbeam = "0.8.4"
bytes ={ version = "*"}
serde = { version = "1.0"}
serde_json = { version = "1.0"}
ctrlc = "*"
thiserror= "*"
[lib]
crate-type = ["lib"]
name = "feather_runtime"
path = "src/lib.rs"


[[example]]
name = "server"
path = "./examples/server.rs"

[[example]]
name = "bench"
path = "./examples/bench.rs"

