[package]
name = "feather-runtime"
version = "0.1.0"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
httparse = "1.10.1"
http = "1.3.1"
crossbeam = "0.8.4"
bytes ={ version = "*"}
serde = { version = "1.0"}
serde_json = { version = "1.0"}
ctrlc = "*"
thiserror= "*"
chrono = "0.4.40"
log = "*"

[dev-dependencies]
env_logger = "0.11.8"

[lib]
crate-type = ["lib"]
name = "feather_runtime"
path = "src/lib.rs"


[[example]]
name = "server"
path = "./examples/server.rs"

[[example]]
name = "bench"
path = "./examples/bench.rs"

