[package]
name = "feather-runtime"
version = "0.1.1"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
httparse = "1.10.1"
http = "1.3.1"
crossbeam = "0.8.4"
bytes ={ version = "1.10.1"}
serde = { version = "1.0.219"}
serde_json = { version = "1.0.140"}
thiserror= "2.0.12"
chrono = "0.4.40"
log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.8"

[lib]
crate-type = ["lib"]
name = "feather_runtime"
path = "src/lib.rs"


[[example]]
name = "server"
path = "./examples/server.rs"

[[example]]
name = "bench"
path = "./examples/bench.rs"

