[package]
name = "feather-runtime"
version = "0.2.2"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
urlencoding = {workspace = true}
[dev-dependencies]
simple_logger = "5.0.0"

[[example]]
name = "server"
path = "./examples/server.rs"