[package]
name = "feather-runtime"
version = "0.3.2"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
log = { workspace = true , optional = true}
serde = { workspace = true, optional = true}
serde_json = { workspace = true, optional = true}
serde_urlencoded = { workspace = true}
thiserror = { workspace = true }
urlencoding = {workspace = true}
parking_lot ={ workspace = true}

[dev-dependencies]
simple_logger = "5.0.0"

[features]
default = ["full"]
full = ["serde", "json","log"]
log = ["dep:log",]
serde = ["dep:serde"]
json = ["serde","dep:serde_json"]
