[package]
name = "feather-runtime"
version = "0.6.1"
edition = "2024"
authors = ["Bersis Sevimli"]
description = "Web Server Runtime for Feather"
license = "MIT"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
log = { workspace = true , optional = true}
serde = { workspace = true}
serde_json = { workspace = true, optional = true}
serde_urlencoded = { workspace = true}
thiserror = { workspace = true }
urlencoding = {workspace = true}

may = { workspace = true }
itoa = { workspace = true}
num_cpus ={ version = "1.17"}

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}

[features]
default = ["full"]
full = ["json","log"]
log = ["dep:log",]
json = ["dep:serde_json"]
async = []

[lib]
test = false
doctest = false
