[package]
name = "feather"
version = "0.4.5"
edition = "2024"
repository = "https://github.com/BersisSe/feather"
description = "Feather: A minimal HTTP framework for Rust"
authors = ["Bersis Sevimli"]
license = "MIT"
readme = "README.md"
keywords = ["http", "web", "framework", "minimal", "rust"]
categories = ["web-programming", "network-programming"]

[dependencies]
anymap = { workspace = true }
chrono = { workspace = true }
feather-runtime = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
log ={ workspace = true, optional = true }
simple_logger = { version = "5.0.0", optional = true }

[features]
default = ["json","log"]
log = ["dep:log", "dep:simple_logger"]
json = ["dep:serde", "dep:serde_json"]
jwt = ["dep:jsonwebtoken"]
